Add "--enable-preview" to run the tests to match compile with runtime